{
  "version": 4,
  "terraform_version": "1.1.0",
  "serial": 58,
  "lineage": "f836b9f5-f637-22ce-8c40-30175adde9db",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "rudra_dev_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-062607db310c7784c",
            "associate_with_private_ip": "10.1.100.50",
            "association_id": "eipassoc-005286ace5ffef1b8",
            "domain": "vpc",
            "id": "eipalloc-062607db310c7784c",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0bc1c4e7f1b1f0099",
            "private_dns": "ip-10-1-100-50.ec2.internal",
            "private_ip": "10.1.100.50",
            "public_dns": "ec2-18-215-123-73.compute-1.amazonaws.com",
            "public_ip": "18.215.123.73",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_network_interface.rudra_dev_nic",
            "aws_security_group.allow_webtraffic",
            "aws_subnet.dev_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "tf_rudra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-083654bd07b5da81d",
            "arn": "arn:aws:ec2:us-east-1:126575542888:instance/i-010de85d55141be3c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-010de85d55141be3c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-test",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "network_interface": [
              {
                "delete_on_termination": false,
                "device_index": 0,
                "network_interface_id": "eni-0bc1c4e7f1b1f0099"
              }
            ],
            "primary_network_interface_id": "eni-0bc1c4e7f1b1f0099",
            "private_dns": "ip-10-1-100-50.ec2.internal",
            "private_ip": "10.1.100.50",
            "public_ip": "18.215.123.73",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-01dbf4f8b666afab4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fada7e85e2ecab9b",
            "tags": {
              "Name": "rudra_dev"
            },
            "tags_all": {
              "Name": "rudra_dev"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-08d1391f69ad0863a"
            ]
          },
          "dependencies": [
            "aws_network_interface.rudra_dev_nic",
            "aws_security_group.allow_webtraffic",
            "aws_subnet.dev_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:internet-gateway/igw-0e114749008559e91",
            "id": "igw-0e114749008559e91",
            "owner_id": "126575542888",
            "tags": {
              "Name": "rudra_dev"
            },
            "tags_all": {
              "Name": "rudra_dev"
            },
            "vpc_id": "vpc-0a571b850b0e41960"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "rudra_dev_nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:network-interface/eni-0bc1c4e7f1b1f0099",
            "id": "eni-0bc1c4e7f1b1f0099",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_prefix_count": 0,
            "mac_address": "02:5a:87:a0:b6:09",
            "owner_id": "126575542888",
            "private_ip": "10.1.100.50",
            "private_ips": [
              "10.1.100.50"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-08d1391f69ad0863a"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0fada7e85e2ecab9b"
          },
          "dependencies": [
            "aws_security_group.allow_webtraffic",
            "aws_subnet.dev_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev_routetable",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:route-table/rtb-03a0cbd7ce6ebf13b",
            "id": "rtb-03a0cbd7ce6ebf13b",
            "owner_id": "126575542888",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e114749008559e91",
                "instance_id": "",
                "ipv6_cidr_block": "::/0",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              },
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e114749008559e91",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "rudra_dev"
            },
            "tags_all": {
              "Name": "rudra_dev"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a571b850b0e41960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.gw",
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c32a755faa8e4423",
            "route_table_id": "rtb-03a0cbd7ce6ebf13b",
            "subnet_id": "subnet-0fada7e85e2ecab9b"
          },
          "dependencies": [
            "aws_vpc.dev_vpc",
            "aws_internet_gateway.gw",
            "aws_route_table.dev_routetable",
            "aws_subnet.dev_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "allow_webtraffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:security-group/sg-08d1391f69ad0863a",
            "description": "Allow Web Traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08d1391f69ad0863a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [
                  "::/0"
                ],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "allow_web",
            "name_prefix": "",
            "owner_id": "126575542888",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "allow_web"
            },
            "tags_all": {
              "Name": "allow_web"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a571b850b0e41960"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:subnet/subnet-0fada7e85e2ecab9b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.1.100.0/24",
            "id": "subnet-0fada7e85e2ecab9b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "126575542888",
            "tags": {
              "Name": "rudra_dev"
            },
            "tags_all": {
              "Name": "rudra_dev"
            },
            "vpc_id": "vpc-0a571b850b0e41960"
          },
          "dependencies": [
            "aws_vpc.dev_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:126575542888:vpc/vpc-0a571b850b0e41960",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.1.0.0/16",
            "default_network_acl_id": "acl-0480bc58d7193c432",
            "default_route_table_id": "rtb-01d3819ee1b48553a",
            "default_security_group_id": "sg-0b33ec7f02324ff40",
            "dhcp_options_id": "dopt-e8fad892",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0a571b850b0e41960",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-01d3819ee1b48553a",
            "owner_id": "126575542888",
            "tags": {
              "Name": "rudra_dev"
            },
            "tags_all": {
              "Name": "rudra_dev"
            }
          }
        }
      ]
    }
  ]
}